--- a/k8s/wordpress-sc.yaml
+++ b/k8s/wordpress-sc.yaml
@@ -1,7 +1,7 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: efs-wordpress-sc
+  name: ebs-wordpress-sc
 provisioner: kubernetes.io/aws-ebs
 parameters:
   type: io1
