Refactor: Changing Load balancer type to NLB

--- a/k8s/step2-1/wordpress-deployment.yaml
+++ b/k8s/step2-1/wordpress-deployment.yaml
@@ -11,6 +11,7 @@ spec:
     app: wordpress
     tier: frontend
   type: LoadBalancer
+  loadBalancerClass: service.k8s.aws/nlb
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
