Add MySQL Service

--- a/k8s/step3/mysql.yaml
+++ b/k8s/step3/mysql.yaml
@@ -5,3 +5,16 @@ metadata:
   name: mysql-secret
 data:
   DB_Password: test1234
+--- 
+apiVersion: v1
+kind: Service
+metadata:
+  name: mysql-headless
+  labels:
+    app: mysql
+spec:
+  ports:
+  - port: 3306
+  clusterIP: None
+  selector:
+    app: mysql
